ghost/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      dispiny.life/app: ghost
  template:
    metadata:
      labels:
        dispiny.life/app: ghost
    spec:
      containers:
        - name: ghost
          image: ghost:5.107.2
          ports:
            - containerPort: 2368
          volumeMounts:
            - mountPath: /var/lib/ghost/content
              name: ghost-storage
      volumes:
        - name: ghost-storage
          persistentVolumeClaim:
            claimName: ghost-pvc
